# fmp-rs

./: .gitignore  Cargo.toml  flake.nix
src/: earning.rs  financial.rs  forex.rs  lib.rs  news.rs
tests/: stock.rs
