[package]
name = "fmp"
version = "0.2.3"
edition = "2021"
rust-version = "1.61"
authors = [
    "Fabien CÔTÉ <fabien.cote@me.com>",
]
license = "MIT"
readme = "README.md"
description = "Financial Modeling Prep API Wrapper"
homepage = "https://github.com/fcote/fmp-rs"
repository = "https://github.com/fcote/fmp-rs"
keywords = ["fmp", "financial", "modeling", "prep"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
